k8s/wikijs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: ghcr.io/linuxserver/wikijs
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          volumeMounts:
          - mountPath: /config
            name: wikijs-data
            subPath: config
          - mountPath: /data
            name: wikijs-data
            subPath: data
          imagePullPolicy: IfNotPresent
      volumes:
      - name: wikijs-data
        persistentVolumeClaim:
          claimName: wikijs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs-service
spec:
  ports:
  - port: 80
    targetPort: 3000
    name: tcp
  selector:
    app: wikijs
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wikijs-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: wiki.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: wikijs-service
          servicePort: 80
